refactor: change recipe-ingredient, youtube-meta, recipe-step repository structure, remove junit4 dependencies